the deck now implements Collection<Purchasble> type, the type shop uses for adding/removing  items.